src/sass/global/_colors-bgs.scss
/* ... */
// E.g. "Accept" button in Editing writing new markdown block in GPT bubble
button.bg-token-interactive-label-accent-default {
	background-color: var(--c-accent) !important;

	&,
	span.text-white {
		color: var(--c-on-accent) !important;
	}
}

// Codex -> Settings -> Analytics -> Monthly usage limit green line
.bg-\[\#22c55e\] {
	background-color: var(--c-accent) !important;
}

// Codex -> Settings -> Analytics -> Monthly usage limit white line
.bg-\[\#ebebf0\] {
	background-color: var(--c-accent-light) !important;
}

.dark\:bg-\[\#1E1E1E\],
.bg-\[\#1E1E1E\] {
	background-color: var(--c-bg-chats-container) !important;
}

// Codex -> https://chatgpt.com/codex/cloud/tasks -> "Logs" element on right
.\[--right-bg\:var\(--bg-tertiary\)\] {
	--right-bg: var(--c-bg-chats-container) !important;
}

// .bg-\[--code-block-surface\] {
// 	// --code-block-surface: var(--c-bg-cm) !important;
// 	background-color: var(--c-bg-cm) !important;
// }

// Fix code-block background inconsistency (new Run/Edit) code block)
@layer utilities {
	.\[--code-block-surface\:var\(--bg-elevated-secondary\)\] {
		--code-block-surface: var(--c-bg-cm) !important;
	}
}

// Stiky header transparentish bg like: "ChatGPT" on top left and "Share" and header action buttons on top right
.translucent-surface {
	background: color-mix(in oklch, var(--c-bg-chats-container) 2%, transparent) !important;
}

// Maps - location counter bubble marker
.bg-black {
	background-color: var(--c-accent-light) !important;
	color: var(--c-accent) !important;
}

/* New "Edit" writing block in GPT bubble (Edit, Ask for Edit). Must be in globals bcs int not just in Chats but full scren when expand */
[class*="dark:bg-[#2a2a2a]"],
.writing-block-editor {
	background: var(--c-bg-cm) !important;
}

